--- a/decorators.ipynb
+++ b/decorators.ipynb
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "7bb66f55",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from module import add"
+    "from module import decorator"
    ]
   },
   {
