--- a/decorators.ipynb
+++ b/decorators.ipynb
@@ -41,15 +41,10 @@
     }
    ],
    "source": [
-    "# Defining the decorator\n",
-    "def decorator(func):\n",
+    "# Defining the function\n",
+    "def add(a, b):\n",
     "\n",
-    "    def wrapper(a, b):\n",
-    "\n",
-    "        if a < b:\n",
-    "            a, b = b, a\n",
-    "        return func(a, b)\n",
-    "    return wrapper\n",
+    "    return a/b\n",
     "\n",
     "# Calling the decorator\n",
     "add = decorator(add)\n",
