--- a/decorators.ipynb
+++ b/decorators.ipynb
@@ -19,6 +19,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "972ca01d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining the decorator\n",
+    "def decorator(func):\n",
+    "\n",
+    "    def wrapper(a, b):\n",
+    "\n",
+    "        if a < b:\n",
+    "            a, b = b, a\n",
+    "        return func(a, b)\n",
+    "    return wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "47b603bf",
    "metadata": {},
    "outputs": [
